--- a/src/main/resources/templates/user/cart.html
+++ b/src/main/resources/templates/user/cart.html
@@ -65,19 +65,19 @@
               >
                 <ul class="navbar-nav">
                   <li class="nav-item active">
-                    <a class="nav-link" href="index.html">Trang chủ</a>
+                    <a class="nav-link" href="/">Trang chủ</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="category.html"> Sản phẩm </a>
+                    <a class="nav-link" href="/category"> Sản phẩm </a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="category.html"> Combo </a>
+                    <a class="nav-link" href="/category"> Combo </a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="category.html"> Dịch vụ </a>
+                    <a class="nav-link" href="/category"> Dịch vụ </a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="contact.html">liên hệ</a>
+                    <a class="nav-link" href="/contact">liên hệ</a>
                   </li>
                 </ul>
               </div>
@@ -88,7 +88,7 @@
                 <a
                   class="cart"
                   data-bs-toggle="offcanvas"
-                  href="cart.html"
+                  href="/cart"
                   role="button"
                   aria-controls="quickCart"
                 >
@@ -157,7 +157,7 @@
                             <a href="#" class="remove_item"><i class="far fa-trash-alt"></i></a>
                         </div> -->
             </div>
-            <a href="/user/category" class="custom_btn btn_greylight ms-2"
+            <a href="/category" class="custom_btn btn_greylight ms-2"
               >Tiếp tục lựa sản phẩm</a
             >
           </div>
