--- a/src/main/resources/templates/user/index.html
+++ b/src/main/resources/templates/user/index.html
@@ -100,7 +100,7 @@
                             <h1>Giới thiệu</h1>
                             <p class="text-muted">Incididunt ut labore et dolore magna aliqua quis ipsum
                                 suspendisse ultrices gravida. Risus commodo viverra</p>
-                            <a href="contact.html" class="custom_btn btn_white">Về chúng tôi</a>
+                            <a href="/contact" class="custom_btn btn_white">Về chúng tôi</a>
                         </div>
                     </div>
                 </div>
@@ -113,7 +113,7 @@
                             <h1>Giới thiệu</h1>
                             <p class="text-muted">Incididunt ut labore et dolore magna aliqua quis ipsum
                                 suspendisse ultrices gravida. Risus commodo viverra</p>
-                            <a href="contact.html" class="custom_btn btn_white">Về chúng tôi</a>
+                            <a href="/contact" class="custom_btn btn_white">Về chúng tôi</a>
                         </div>
                     </div>
                 </div>
@@ -126,7 +126,7 @@
                             <h1>Giới thiệu</h1>
                             <p class="text-muted">Incididunt ut labore et dolore magna aliqua quis ipsum
                                 suspendisse ultrices gravida. Risus commodo viverra</p>
-                            <a href="contact.html" class="custom_btn btn_white">Về chúng tôi</a>
+                            <a href="/contact" class="custom_btn btn_white">Về chúng tôi</a>
                         </div>
                     </div>
                 </div>
@@ -357,7 +357,7 @@
                                                 <a class="text-muted-1" href="#">Category</a>
                                             </h5>
                                             <h4 class="product_title">
-                                                <a href="single-product.html">Product Name</a>
+                                                <a href="/single-product">Product Name</a>
                                             </h4>
                                             <div class="product_price current_prefix">
                                                 100
@@ -367,7 +367,7 @@
                                 </div>
                                 <div class="col-lg-3 col-sm-6 col-6">
                                     <div class="single_product_item">
-                                        <a href="single-product.html">
+                                        <a href="/product">
                                             <img src="/images/product/item.jpg">
                                             <span class="product_tag">Nổi bật</span>
                                         </a>
@@ -377,7 +377,7 @@
                                                 <a class="text-muted-1" href="#">Category</a>
                                             </h5>
                                             <h4 class="product_title">
-                                                <a href="single-product.html">Product Name</a>
+                                                <a href="/single-product">Product Name</a>
                                             </h4>
                                             <div class="product_price current_prefix">
                                                 100
@@ -400,7 +400,7 @@
             <div class="offer_text">
                 <h2>Cùng chọn sản phẩm decor<br> <span>phù hợp</span> với bạn nhé.</h2>
             </div>
-            <a href="category.html" class="custom_btn btn_white">Đến cửa hàng</a>
+            <a href="/category" class="custom_btn btn_white">Đến cửa hàng</a>
 
         </div>
     </section>
@@ -413,16 +413,16 @@
                 <div class="row justify-content-around">
                     <div class="col-sm-6 col-lg-5">
                         <nav class="navbar">
-                            <a class="nav-brand" href="index.html"> <img src="/images/logo/white_logo.png" alt="logo"> </a>
+                            <a class="nav-brand" href="/"> <img src="/images/logo/white_logo.png" alt="logo"> </a>
                     </div>
                     <div class="col-sm-6 col-lg-2">
                         <div class="single_footer_part">
                             <h4>Our Page</h4>
                             <ul class="list-unstyled">
-                                <li><a href="">Trang chủ</a></li>
-                                <li><a href="/category.html">Sản phẩm</a></li>
-                                <li><a href="/user/">Combo</a></li>
-                                <li><a href="">Liên hệ</a></li>
+                                <li><a href="/">Trang chủ</a></li>
+                                <li><a href="/category">Sản phẩm</a></li>
+                                <li><a href="/category">Combo</a></li>
+                                <li><a href="/contact">Liên hệ</a></li>
                                 
                             </ul>
                         </div>
@@ -477,7 +477,7 @@
         <div class="offcanvas-footer">
             <div class="total_area d-flex align-items-center justify-content-between">
                 <span class="total_text">Tổng:</span>
-                <span class="total_price">100.000đ</span>
+                <span class="total_price"></span>
             </div>
             <div class="cart_button row">
                 <a href="/cart" class="custom_btn btn_black btn-block">View cart</a>
