--- a/src/main/resources/templates/user/policy.html
+++ b/src/main/resources/templates/user/policy.html
@@ -29,7 +29,7 @@
             <div class="row align-items-center">
                 <div class="col-lg-12">
                     <nav class="navbar navbar-expand-lg navbar-light">
-                        <a class="navbar-brand" href="index.html"> <img src="/images/logo/white_logo.png" alt="logo"> </a>
+                        <a class="navbar-brand" href="/"> <img src="/images/logo/white_logo.png" alt="logo"> </a>
                         <button class="navbar-toggler" type="button" data-toggle="collapse"
                             data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                             aria-expanded="false" aria-label="Toggle navigation">
@@ -39,25 +39,25 @@
                         <div class="collapse navbar-collapse main-menu-item" id="navbarSupportedContent">
                             <ul class="navbar-nav">
                                 <li class="nav-item">
-                                    <a class="nav-link" href="index.html">Trang chủ</a>
+                                    <a class="nav-link" href="/">Trang chủ</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="category.html">
+                                    <a class="nav-link" href="/category">
                                         Sản phẩm
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="category.html">
+                                    <a class="nav-link" href="/category">
                                         Combo
                                     </a>
                                 </li>
                                 <li class="nav-item active">
-                                    <a class="nav-link" href="policy.html">
+                                    <a class="nav-link" href="/policy">
                                         Chính sách
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="contact.html">liên hệ</a>
+                                    <a class="nav-link" href="/contact">liên hệ</a>
                                 </li>
                             </ul>
                         </div>
@@ -89,7 +89,7 @@
     <nav class="breadcrumb_area" aria-label="breadcrumb" style="--bs-breadcrumb-divider: '>';">
         <div class="container">
             <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="/user/index.html">Trang chủ</a></li>
+                <li class="breadcrumb-item"><a href="/">Trang chủ</a></li>
                 <li class="breadcrumb-item active" aria-current="page">Chính sách</li>
               </ol>
         </div>
@@ -186,16 +186,16 @@
                 <div class="row justify-content-around">
                     <div class="col-sm-6 col-lg-5">
                         <nav class="navbar">
-                            <a class="nav-brand" href="index.html"> <img src="/images/logo/white_logo.png" alt="logo"> </a>
+                            <a class="nav-brand" href="/"> <img src="/images/logo/white_logo.png" alt="logo"> </a>
                     </div>
                     <div class="col-sm-6 col-lg-2">
                         <div class="single_footer_part">
                             <h4>Our Page</h4>
                             <ul class="list-unstyled">
-                                <li><a href="">Trang chủ</a></li>
-                                <li><a href="/user/category.html">Sản phẩm</a></li>
-                                <li><a href="/user/">Combo</a></li>
-                                <li><a href="">Liên hệ</a></li>
+                                <li><a href="/">Trang chủ</a></li>
+                                <li><a href="/category">Sản phẩm</a></li>
+                                <li><a href="/category">Combo</a></li>
+                                <li><a href="/contact">Liên hệ</a></li>
                                 
                             </ul>
                         </div>
@@ -204,8 +204,8 @@
                         <div class="single_footer_part">
                             <h4>Our Social</h4>
                             <ul class="list-unstyled">
-                                <li><a href="">Facebook</a></li>
-                                <li><a href="">Tiktok</a></li>
+                                <li><a href="https://www.facebook.com/profile.php?id=61560555539153">Facebook</a></li>
+                                <li><a href="https://www.tiktok.com">Tiktok</a></li>
                             </ul>
                         </div>
                     </div>
@@ -253,7 +253,7 @@
                 <span class="total_price">100.000đ</span>
             </div>
             <div class="cart_button row">
-                <a href="/user/cart.html" class="custom_btn btn_black btn-block">View cart</a>
+                <a href="/cart" class="custom_btn btn_black btn-block">View cart</a>
             </div>
         </div>
     </div>
