--- a/src/main/resources/templates/user/contact.html
+++ b/src/main/resources/templates/user/contact.html
@@ -30,7 +30,7 @@
             <div class="row align-items-center">
                 <div class="col-lg-12">
                     <nav class="navbar navbar-expand-lg navbar-light">
-                        <a class="navbar-brand" href="index.html"> <img src="/images/logo/white_logo.png" alt="logo"> </a>
+                        <a class="navbar-brand" href="/"> <img src="/images/logo/white_logo.png" alt="logo"> </a>
                         <button class="navbar-toggler" type="button" data-toggle="collapse"
                             data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                             aria-expanded="false" aria-label="Toggle navigation">
@@ -40,25 +40,25 @@
                         <div class="collapse navbar-collapse main-menu-item" id="navbarSupportedContent">
                             <ul class="navbar-nav">
                                 <li class="nav-item">
-                                    <a class="nav-link" href="index.html">Trang chủ</a>
+                                    <a class="nav-link" href="/">Trang chủ</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="category.html">
+                                    <a class="nav-link" href="/category">
                                         Sản phẩm
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="category.html">
+                                    <a class="nav-link" href="/category">
                                         Combo
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="policy.html">
+                                    <a class="nav-link" href="/policy">
                                         Chính sách
                                     </a>
                                 </li>
                                 <li class="nav-item active">
-                                    <a class="nav-link" href="contact.html">liên hệ</a>
+                                    <a class="nav-link" href="/contact">liên hệ</a>
                                 </li>
                             </ul>
                         </div>
@@ -180,7 +180,7 @@
                 <span class="total_price">100.000đ</span>
             </div>
             <div class="cart_button row">
-                <a href="/user/cart.html" class="custom_btn btn_black btn-block">View cart</a>
+                <a href="/cart" class="custom_btn btn_black btn-block">View cart</a>
             </div>
         </div>
     </div>
