--- a/src/main/resources/templates/user/order-success.html
+++ b/src/main/resources/templates/user/order-success.html
@@ -34,7 +34,7 @@
     </div>
 
     <section class="successnoti_part">
-      <a class="logo" href="index.html">
+      <a class="logo" href="/">
         <img src="/images/logo/black_logo.png" alt="logo"
       /></a>
       <div class="successnoti_area">
