--- a/src/main/resources/templates/user/order-failure.html
+++ b/src/main/resources/templates/user/order-failure.html
@@ -47,8 +47,8 @@
           Vui lòng trở về trang checkout hoặc trang chủ.
         </div>
         <div class="d-flex justify-content-center align-items-center">
-          <a href="index.html" class="custom_btn btn_black">Trở về Checkout</a>
-          <a href="index.html" class="custom_btn btn_greylight"
+          <a href="/check-out" class="custom_btn btn_black">Trở về Checkout</a>
+          <a href="/" class="custom_btn btn_greylight"
             >Trở về Trang chủ</a
           >
         </div>
