--- a/src/main/resources/templates/user/order-success.html
+++ b/src/main/resources/templates/user/order-success.html
@@ -55,7 +55,7 @@
         <div class="thanks_noti mb-5">
           <b>Deprop Studio cảm ơn bạn vì đã sử dụng dịch vụ!</b>
         </div>
-        <a href="index.html" class="custom_btn btn_black">Trở về trang chủ</a>
+        <a href="/" class="custom_btn btn_black">Trở về trang chủ</a>
       </div>
     </section>
 
@@ -105,7 +105,7 @@
           <span class="total_price">100.000đ</span>
         </div>
         <div class="cart_button row">
-          <a href="/user/cart.html" class="custom_btn btn_black btn-block"
+          <a href="/user/cart" class="custom_btn btn_black btn-block"
             >View cart</a
           >
         </div>
