--- a/src/main/resources/templates/user/404.html
+++ b/src/main/resources/templates/user/404.html
@@ -25,9 +25,9 @@
             <div class="error_subtitle">
                 Trang bạn đang tìm hiện không tìm thấy hoặc đã xảy ra lỗi.
             </div>
-            <a href="/index" class="custom_btn btn_white">Quay về trang chủ</a>
+            <a href="/" class="custom_btn btn_white">Quay về trang chủ</a>
         </div>
-        <a class="logo" href="index.html"> <img src="/images/logo/white_logo.png" alt="logo"></a>
+        <a class="logo" href="/"> <img src="/images/logo/white_logo.png" alt="logo"></a>
     </section>
 
    <!-- jquery plugins here-->
