--- a/sass/_order_confirm.scss
+++ b/sass/_order_confirm.scss
@@ -8,48 +8,64 @@
     box-shadow: 0 0 10px rgba(0,0,0,0.1);
     background-color: #ffffff;
 }
-
-.logo {
-    margin-bottom: 40px;
-    text-align: center;
+.order_code_text {
+    font-size: 16px;
+    color: $subtext2;
 }
 
 .order_title{
+    margin-bottom: 10px;
     h1 {
-        text-align: center;
         font-size: 20px;
         font-weight: 600;
         color: #333;
-        margin-bottom: 40px;
+        margin-bottom: 20px;
     }
     .customer_name {
         font-weight: 700;
     }
 }
 
-.order_summary {
+.info_title {
+    font-weight: 700;
+    font-size: 15px;
+    margin-bottom: 10px;
+}
+
+.order_info {
     background-color: $grey;
-    padding: 10px;
-    margin-bottom: 20px;
+    padding: 10px 10px;
+    margin-bottom: 10px;
+    gap: 0;
+    .customer_name, .customer_phone, .customer_address {
+        font-weight: 700;
+    }
+}
+
+.order_summary {
+    width: 50%;
+    padding-left: 10px;
+    border-left: 1px solid $hover;
     .deliver_time, .payment_status {
         font-weight: 700;
     }
 }
 
+.order_customer {
+    width: 50%;
+    padding-right: 10px;
+    
+}
+
 .order_details {
+    padding: 10px 0;
     .details_title {
         font-weight: 700;
         font-size: 15px;
     }
     
-    .order_time {
+    .order_time, .product_name, .subtotal_price {
         font-weight: 700;
-    }
-
-    .order_item {
-        .product_name, .subtotal_price {
-            font-weight: 700;
-        }
     }
 
     .order_item {
@@ -79,9 +95,12 @@
 
 .order_total {
     display: flex;
-    gap: 10px;
+    gap: 20px;
     justify-content: right;
     .order_total_text {
+        text-align: right;
+    }
+    .order_total_price {
         text-align: right;
     }
     .total_payment {
