--- a/src/main/resources/templates/user/index.html
+++ b/src/main/resources/templates/user/index.html
@@ -139,7 +139,7 @@
                             <h1>Giới thiệu</h1>
                             <p class="text-muted">Incididunt ut labore et dolore magna aliqua quis ipsum
                                 suspendisse ultrices gravida. Risus commodo viverra</p>
-                            <a href="contact.html" class="custom_btn btn_white">Về chúng tôi</a>
+                            <a href="/contact" class="custom_btn btn_white">Về chúng tôi</a>
                         </div>
                     </div>
                 </div>
