--- a/sass/style.scss
+++ b/sass/style.scss
@@ -21,7 +21,6 @@
 @import "product";
 @import "elements";
 @import "breadcrumb";
-@import "offcanvas";
 @import "coreds";
 
 // product list
@@ -31,6 +30,9 @@
 @import "related_product";
 @import "single_product";
 @import "product_item";
+
+//combo
+@import "combo";
 
 //filter
 @import "filter";
