--- a/css/user.css
+++ b/css/user.css
@@ -853,17 +853,20 @@ ul {
 .banner_part .owl-theme .owl-nav {
   margin: 0;
 }
-.banner_part .owl-theme .owl-nav .owl-next, .banner_part .owl-theme .owl-nav .owl-prev {
+.banner_part .owl-theme .owl-nav .owl-next,
+.banner_part .owl-theme .owl-nav .owl-prev {
   position: absolute;
   top: 45%;
 }
 @media (max-width: 991px) {
-  .banner_part .owl-theme .owl-nav .owl-next, .banner_part .owl-theme .owl-nav .owl-prev {
+  .banner_part .owl-theme .owl-nav .owl-next,
+  .banner_part .owl-theme .owl-nav .owl-prev {
     display: none;
   }
 }
 @media only screen and (min-width: 992px) and (max-width: 1200px) {
-  .banner_part .owl-theme .owl-nav .owl-next, .banner_part .owl-theme .owl-nav .owl-prev {
+  .banner_part .owl-theme .owl-nav .owl-next,
+  .banner_part .owl-theme .owl-nav .owl-prev {
     display: none;
   }
 }
@@ -4129,6 +4132,134 @@ html, body {
 
 .product_filter.hide {
   display: none !important;
+}
+
+.slider {
+  height: 100vh;
+  margin-top: 61px;
+  position: relative;
+}
+.slider .list .item {
+  position: absolute;
+  inset: 0 0 0 0;
+  overflow: hidden;
+  opacity: 0;
+  transition: 0.5s;
+}
+.slider .list .item img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.slider .list .item::after {
+  content: "";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  background-image: linear-gradient(to top, #141414 -40%, transparent);
+}
+.slider .list .item .content {
+  position: absolute;
+  left: 10%;
+  top: 20%;
+  width: 500px;
+  max-width: 80%;
+  z-index: 1;
+}
+.slider .list .item .content p:nth-child(1) {
+  text-transform: uppercase;
+  letter-spacing: 10px;
+}
+.slider .list .item .content h2 {
+  font-size: 100px;
+  margin: 0;
+}
+.slider .list .item.active {
+  opacity: 1;
+  z-index: 10;
+}
+.slider .list .item.active p:nth-child(3) {
+  animation-duration: 1s;
+}
+.slider .list .item p, .slider .list .item h2 {
+  color: #fff;
+}
+
+@keyframes showContent {
+  to {
+    transform: translateY(0);
+    filter: blur(0);
+    opacity: 1;
+  }
+}
+.slider .list .item.active p:nth-child(1),
+.slider .list .item.active h2,
+.slider .list .item.active p:nth-child(3) {
+  transform: translateY(50px);
+  filter: blur(10px);
+  opacity: 0;
+  animation: showContent 0.6s 0.1s ease-in-out 1 forwards;
+}
+
+.arrows {
+  position: absolute;
+  top: 30%;
+  right: 50px;
+  z-index: 100;
+}
+.arrows button {
+  background-color: rgba(238, 238, 238, 0.3333333333);
+  border: none;
+  font-family: monospace;
+  width: 40px;
+  height: 40px;
+  border-radius: 5px;
+  color: #eee;
+  transition: 0.5s;
+}
+.arrows button:hover {
+  background-color: #eee;
+  color: black;
+}
+
+.thumbnail {
+  position: absolute;
+  bottom: 20px;
+  z-index: 11;
+  display: flex;
+  gap: 10px;
+  width: 100%;
+  height: 80px;
+  padding: 0 50px;
+  box-sizing: border-box;
+  overflow: auto;
+  justify-content: center;
+}
+.thumbnail::-webkit-scrollbar {
+  width: 0;
+}
+.thumbnail .item {
+  width: 150px;
+  height: 80px;
+  filter: brightness(0.5);
+  transition: 0.5s;
+  flex-shrink: 0;
+}
+.thumbnail .item img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 10px;
+}
+.thumbnail .item.active {
+  filter: brightness(1);
+}
+.thumbnail .item .content {
+  position: absolute;
+  inset: auto 10px 10px 10px;
+  color: #fff;
 }
 
 .filter_area {
