--- a/src/main/resources/templates/user/checkout.html
+++ b/src/main/resources/templates/user/checkout.html
@@ -295,7 +295,7 @@
           </div>
           <div class="col-md-7 order-md-1">
             <h4 class="mb-3">Thông tin đơn hàng</h4>
-            <form class="needs-validation" novalidate="" th:action="@{/create-payment-link}" th:object="${customer}" method="post">
+            <form id="checkoutForm" class="needs-validation" novalidate="" th:action="@{/check-out/add-to-cart}" th:object="${customer}" method="post">
               <div class="row">
                 <div class="form-floating col-md-6 mb-3">
                   <input
