--- a/src/main/resources/templates/user/cart.html
+++ b/src/main/resources/templates/user/cart.html
@@ -156,6 +156,8 @@
                             </div>
                             <a href="#" class="remove_item"><i class="far fa-trash-alt"></i></a>
                         </div> -->
+              <span hidden class="total_price"><strong></strong></span>
+
             </div>
             <a href="/category" class="custom_btn btn_greylight ms-2"
               >Tiếp tục lựa sản phẩm</a
