--- a/src/main/resources/templates/user/checkout.html
+++ b/src/main/resources/templates/user/checkout.html
@@ -384,6 +384,7 @@
                   placeholder="Leave a comment here"
                   id="floatingTextarea2"
                   style="height: 200px"
+                  name="note"
                   ></textarea>
                 <label for="floatingTextarea2"
                   >Ghi chú đơn hàng (tuỳ chọn)</label
