--- a/src/main/resources/templates/user/checkout.html
+++ b/src/main/resources/templates/user/checkout.html
@@ -30,7 +30,11 @@
         />
         <!-- style CSS -->
         <link rel="stylesheet" href="/css/user.css"/>
-      </head>
+      <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+      <script src="sweetalert2.all.min.js"></script>
+      <script src="sweetalert2.min.js"></script>
+      <link rel="stylesheet" href="sweetalert2.min.css">
+    </head>
 
   <body>
     <div class="spinner-wrapper">
