--- a/css/user.css
+++ b/css/user.css
@@ -627,8 +627,11 @@ ul {
     color: #fff;
   }
   .main_menu .main-menu-item .nav-item.active {
-    background-color: #ff3368;
-    background-image: linear-gradient(16deg, rgb(255, 0, 90) 0%, rgb(255, 93, 45) 64%, rgb(255, 186, 0) 100%);
+    background-color: #fff;
+  }
+  .main_menu .main-menu-item .nav-item.active .nav-link {
+    color: #000;
+    font-weight: 600;
   }
   .navbar-collapse {
     z-index: 9999 !important;
@@ -4135,7 +4138,7 @@ html, body {
 }
 
 .slider {
-  height: 100vh;
+  height: 100%;
   margin-top: 61px;
   position: relative;
 }
@@ -4158,32 +4161,31 @@ html, body {
   position: absolute;
   left: 0;
   bottom: 0;
-  background-image: linear-gradient(to top, #141414 -40%, transparent);
+  background-image: linear-gradient(-35deg, #000 -20%, transparent 20%);
 }
 .slider .list .item .content {
   position: absolute;
-  left: 10%;
-  top: 20%;
-  width: 500px;
+  right: 20px;
+  bottom: 20px;
+  width: 250px;
   max-width: 80%;
   z-index: 1;
+  text-align: right;
 }
-.slider .list .item .content p:nth-child(1) {
+.slider .list .item .content p {
   text-transform: uppercase;
   letter-spacing: 10px;
 }
 .slider .list .item .content h2 {
-  font-size: 100px;
+  font-size: 40px;
   margin: 0;
 }
 .slider .list .item.active {
   opacity: 1;
   z-index: 10;
 }
-.slider .list .item.active p:nth-child(3) {
-  animation-duration: 1s;
-}
-.slider .list .item p, .slider .list .item h2 {
+.slider .list .item p,
+.slider .list .item h2 {
   color: #fff;
 }
 
@@ -4194,44 +4196,21 @@ html, body {
     opacity: 1;
   }
 }
-.slider .list .item.active p:nth-child(1),
-.slider .list .item.active h2,
-.slider .list .item.active p:nth-child(3) {
+.slider .list .item.active p,
+.slider .list .item.active h2 {
   transform: translateY(50px);
   filter: blur(10px);
   opacity: 0;
   animation: showContent 0.6s 0.1s ease-in-out 1 forwards;
 }
 
-.arrows {
-  position: absolute;
-  top: 30%;
-  right: 50px;
-  z-index: 100;
-}
-.arrows button {
-  background-color: rgba(238, 238, 238, 0.3333333333);
-  border: none;
-  font-family: monospace;
-  width: 40px;
-  height: 40px;
-  border-radius: 5px;
-  color: #eee;
-  transition: 0.5s;
-}
-.arrows button:hover {
-  background-color: #eee;
-  color: black;
-}
-
 .thumbnail {
   position: absolute;
-  bottom: 20px;
   z-index: 11;
   display: flex;
+  height: 100%;
+  flex-direction: column;
   gap: 10px;
-  width: 100%;
-  height: 80px;
   padding: 0 50px;
   box-sizing: border-box;
   overflow: auto;
@@ -4241,9 +4220,11 @@ html, body {
   width: 0;
 }
 .thumbnail .item {
+  cursor: pointer;
   width: 150px;
   height: 80px;
   filter: brightness(0.5);
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   transition: 0.5s;
   flex-shrink: 0;
 }
@@ -4253,11 +4234,25 @@ html, body {
   object-fit: cover;
   border-radius: 10px;
 }
+.thumbnail .item::after {
+  content: "";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  border-radius: 10px;
+  left: 0;
+  bottom: 0;
+  background-image: linear-gradient(to top, #000 -40%, transparent);
+}
 .thumbnail .item.active {
+  filter: brightness(1);
+}
+.thumbnail .item:hover {
   filter: brightness(1);
 }
 .thumbnail .item .content {
   position: absolute;
+  z-index: 10;
   inset: auto 10px 10px 10px;
   color: #fff;
 }
