--- a/sass/_combo.scss
+++ b/sass/_combo.scss
@@ -1,5 +1,5 @@
 .slider {
-  height: 100vh;
+  height: 100%;
   margin-top: 61px;
   position: relative;
   .list {
@@ -21,36 +21,31 @@
         position: absolute;
         left: 0;
         bottom: 0;
-        background-image: linear-gradient(to top, #141414 -40%, transparent);
+        background-image: linear-gradient(-35deg, #000 -20%, transparent 20%);
       }
       .content {
         position: absolute;
-        left: 10%;
-        top: 20%;
-        width: 500px;
+        right: 20px;
+        bottom: 20px;
+        width: 250px;
         max-width: 80%;
         z-index: 1;
+        text-align: right;
         p {
-          &:nth-child(1) {
-            text-transform: uppercase;
-            letter-spacing: 10px;
-          }
+          text-transform: uppercase;
+          letter-spacing: 10px;
         }
         h2 {
-          font-size: 100px;
+          font-size: 40px;
           margin: 0;
         }
       }
       &.active {
         opacity: 1;
         z-index: 10;
-        p {
-          &:nth-child(3) {
-            animation-duration: 1s;
-          }
-        }
       }
-      p,h2 {
+      p,
+      h2 {
         color: $white;
       }
     }
@@ -64,44 +59,21 @@
   }
 }
 
-.slider .list .item.active p:nth-child(1),
-.slider .list .item.active h2,
-.slider .list .item.active p:nth-child(3) {
+.slider .list .item.active p,
+.slider .list .item.active h2 {
   transform: translateY(50px);
   filter: blur(10px);
   opacity: 0;
   animation: showContent 0.6s 0.1s ease-in-out 1 forwards;
 }
 
-.arrows {
-  position: absolute;
-  top: 30%;
-  right: 50px;
-  z-index: 100;
-  button {
-    background-color: #eee5;
-    border: none;
-    font-family: monospace;
-    width: 40px;
-    height: 40px;
-    border-radius: 5px;
-    color: #eee;
-    transition: 0.5s;
-    &:hover {
-      background-color: #eee;
-      color: black;
-    }
-  }
-}
-
 .thumbnail {
   position: absolute;
-  bottom: 20px;
   z-index: 11;
   display: flex;
+  height: 100%;
+  flex-direction: column;
   gap: 10px;
-  width: 100%;
-  height: 80px;
   padding: 0 50px;
   box-sizing: border-box;
   overflow: auto;
@@ -110,9 +82,11 @@
     width: 0;
   }
   .item {
+    cursor: pointer;
     width: 150px;
     height: 80px;
     filter: brightness(0.5);
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     transition: 0.5s;
     flex-shrink: 0;
     img {
@@ -121,11 +95,25 @@
       object-fit: cover;
       border-radius: 10px;
     }
+    &::after {
+      content: "";
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      border-radius: 10px;
+      left: 0;
+      bottom: 0;
+      background-image: linear-gradient(to top, #000 -40%, transparent);
+    }
     &.active {
+      filter: brightness(1);
+    }
+    &:hover {
       filter: brightness(1);
     }
     .content {
       position: absolute;
+      z-index: 10;
       inset: auto 10px 10px 10px;
       color: $white;
     }
