--- a/sass/_menu.scss
+++ b/sass/_menu.scss
@@ -187,8 +187,11 @@
 			}
 		}
 		.nav-item.active{
-			background-color: $btn_bg;
-			background-image: linear-gradient( 16deg, rgb(255,0,90) 0%, rgb(255,93,45) 64%, rgb(255,186,0) 100%);
+			background-color: $white;
+			.nav-link {
+				color: $black;
+				font-weight: 600;
+			}
 		}
 	}
 
